# SSG_Manipulator

./: CMakeLists.txt  README.md  package.xml
arduino/: SSG_distributor_middle_arm.ino
arduino/SSG_Dstributor_ros/: SSG_Dstributor_ros.ino
arduino/SSG_distributor_middle_arm/: SSG_distributor_middle_arm.ino
src/: manipulator_test.cpp  plate.cpp  test.cpp
